--- a/webpackGeek/src/index/index.html
+++ b/webpackGeek/src/index/index.html
@@ -6,6 +6,9 @@
     <script>${ require('raw-loader!../../node_modules/lib-flexible/flexible.js') }</script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!--HTML_PLACEHOLDER-->
+    </div>
+    <!--INITIAL_DATA_PLACEHOLDER-->
   </body>
 </html>
